[package]
name = "rws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
clap = "2.33"
url = "2.3"
colored = "2"


